# one-plus-one

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-10-one-plus-one-plan.md
docs/superpowers/specs/: 2026-04-10-one-plus-one-design.md
src/one_plus_one/: __init__.py  assessor.py  cli.py  daily_report.py  embedder.py  mcp_server.py  models.py  quality.py  retriever.py  store.py  synthesizer.py
src/one_plus_one.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/one_plus_one/crawler/: __init__.py  github.py  trending.py
tests/: conftest.py  test_assessor.py  test_embedder.py  test_github_crawler.py  test_integration.py  test_integration_p1.py  test_models.py  test_quality.py  test_retriever.py  test_store.py  test_synthesizer.py  test_trending.py
